--- a/AdvancedViewSample/templates/store/item_list.html
+++ b/AdvancedViewSample/templates/store/item_list.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<table>
+    <tr>
+        <th>名前</th>
+        <th>値段</th>
+    </tr>
+    {% for item in items %}
+    <tr>
+        <td><a href="{% url 'store:item_detail' id=item.id %}">{{ item.name }}</a></td>
+        <td>{{ item.price }} 円</td>
+    </tr>
+    {% endfor %}
+</table>
 </body>
 </html>
