--- a/AdvancedViewSample/templates/store/500.html
+++ b/AdvancedViewSample/templates/store/500.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h1>システムエラーです</h1>
+<p>aaa@mail.comまでお問い合わせください</p>
+<a href="{% url 'store:item_list %}">ホーム</a>
 </body>
 </html>
