--- a/AdvancedViewSample/templates/user/base.html
+++ b/AdvancedViewSample/templates/user/base.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<nav>
+  <a href="{% url 'user:index' %}">ホーム</a>
+  <a href="{% url 'admin:index' %}">管理画面</a>
+  {% if user.is_authenticated %}
+    <a href="{% url 'user:user_logout' %}">ログアウト</a>
+  {% else %}
+    <a href="{% url 'user:register' %}">登録画面</a>
+    <a href="{% url 'user:user_login' %}">ログイン</a>
+  {% endif %}
+  <a href="{% url 'user:info' %}">インフォメーション</a>
+</nav>
+<div>
+  {% block content %}
+  {% endblock %}
+</div>
 </body>
 </html>
