--- a/AdvancedViewSample/templates/user/login.html
+++ b/AdvancedViewSample/templates/user/login.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'user/base.html' %}
+{% block content %}
+<h1>Login</h1>
+<form method="POST">
+  {% csrf_token %}
+  {{ login_form.as_p }}
+  <input type="submit" value="ログイン">
+</form>
+{% endblock %}
