--- a/AdvancedViewSample/templates/user/registration.html
+++ b/AdvancedViewSample/templates/user/registration.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'user/base.html' %}
+{% block content %}
+<h1>Registration</h1>
+<form method="POST" enctype="multipart/form-data">
+  {% csrf_token %}
+  {{ user_form.as_p }}
+  {{ profile_form.as_p }}
+  <input type="submit" value="登録">
+</form>
+{% endblock %}
