--- a/AdvancedViewSample/templates/user/user_list.html
+++ b/AdvancedViewSample/templates/user/user_list.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h1>ユーザーリスト</h1>
+<a href="{% url 'store:item_list' %}">アイテムリストへ</a>
 </body>
 </html>
